[package]
name = "monday-claim"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
prettytable-rs = "0.10"
config = "0.13"
anyhow = "1.0"
toml = "0.9.5"
